<resources>
    <string name="app_name">Partes Trabajo</string>
    <string name="app_nam">Partes de trabajo</string>
    <string name="app_name_des">Partes Trabajo Individuales</string>
    <string name="navigation_drawer_open">Partes Trabajo</string>
    <string name="navigation_drawer_close">Partes Trabajo</string>
    <string name="nav_header_title">Partes de Trabajo Individuales</string>
    <string name="nav_header_subtitle">lex.web.app.developer@gmail.com</string>
    <string name="nav_header_desc">Partes Trabajo</string>
    <string name="action_settings">Partes Trabajo</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="client">Lista de clientes</string>
    <string name="list_work">Lista de partes</string>
    <string name="json">Exportar</string>
    <string name="clientAdd">Añadir un cliente</string>
    <string name="comment">Tu comentario, opinión</string>
    <string name="share">Compartir</string>
    <string name="nombre">Nombre</string>
    <string name="addNewClient">Añadir nuevo cliente</string>
    <string name="telefono">Telefono</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar cliente</string>
    <string name="update">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="clientSaved">guardado en la base de datos</string>
    <string name="error">Error al guadar</string>
    <string name="imageSaved">Guardado</string>
    <string name="imageSavedError">No guardado</string>
    <string name="partSave">\n Registro guardado \n</string>
    <string name="partSaveError">Error al guardar el registro</string>
    <string name="thereArentAnyClientYeat">No hay ningún cliente todavía</string>
    <string name="name">"Nombre: "</string>
    <string name="create_part">Crear un parte</string>
    <string name="call">LLamar</string>
    <string name="createNewPart">Crear un parte nuevo</string>
    <string name="update_client">Modificar los datos del cliente</string>
    <string name="client_modified">Datos del cliente modificados</string>
    <string name="delete_client">Eliminar el cliente</string>
    <string name="are_sure">¿ Estás seguro ?</string>
    <string name="yes">SI</string>
    <string name="client_deleted">Cliente eleminado</string>
    <string name="date">Fecha</string>
    <string name="startTimePart">Hora de inicio:</string>
    <string name="timeStartPart">Hora de inicio</string>
    <string name="timeFinishPart">Tiempo de finalizacion:</string>
    <string name="workPart">Trabajo ejecutado:</string>
    <string name="pricePart">Precio:</string>
    <string name="autoPart">Autorizado por:</string>
    <string name="updatePart">"Modificar "</string>
    <string name="delete_signature">Eliminar la firma</string>
    <string name="save_signature">Aceptar y guardar</string>
    <string name="signature_deleted">La firma ha sido borrada</string>
    <string name="firma_no_encontada">La firma no encontrada para eliminar, puede ser que ya ha sido borrada</string>
    <string name="sign_accept">La firma ha sido guadada</string>
    <string name="name_client">Nombre del cliente:</string>
    <string name="listOfPart">Lista de partes</string>
    <string name="numero">Numero</string>
    <string name="sent_part">Enviar el informe</string>
    <string name="change_part">Editar el informe</string>
    <string name="delete_part">Eliminar el informe</string>
    <string name="are_you_sure">¿ Estas seguro ?</string>
    <string name="inter_message">Selección : </string>
    <string name="part_deleted">Informe iliminado</string>
    <string name="creating_archive_for_send">Creando archivo para él envió</string>
    <string name="number">Numero :</string>
    <string name="fecha">Fecha:</string>
    <string name="time_work">Tiempo de funcionamiento</string>
    <string name="work_executed">El trabajo realizado:</string>
    <string name="in_total">En total:</string>
    <string name="autorization">"Autorizado por: "</string>
    <string name="noListPart">Aun no hay ningin parte...</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://alexander-vishnevsky.web.app/.well-known/assetlinks.json\" }]</string>
</resources>
