<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    android:layout_margin="22dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    <EditText
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/idEdit"
        tools:ignore="LabelFor" />
    -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp" >
        <EditText
            android:id="@+id/nameEdit"
            android:hint="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp" >
        <EditText
            android:inputType="text"
            android:importantForAutofill="no"
            android:id="@+id/telefoneEdit"
            android:hint="@string/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_weight="2"
        android:layout_marginTop="51dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:layout_marginEnd="31dp"
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:padding="5dp"
            tools:ignore="ButtonStyle,NestedWeights"
            android:layout_margin="11dp"
            android:text="@string/cancel"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="35dp"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/update"
            android:padding="5dp"
            android:layout_margin="11dp"
            android:text="@string/update"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="35dp"
            tools:ignore="ButtonStyle"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/save"
            android:padding="5dp"
            tools:ignore="ButtonStyle"
            android:layout_margin="11dp"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="35dp"/>
    </LinearLayout>

</LinearLayout>