<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout">
          <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".ui.saveForFuture.Home"
                android:background="@drawable/back"
                >
                <LinearLayout
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="22dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:padding="22dp"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:layout_marginTop="11dp"
                        android:id="@+id/data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.cardview.widget.CardView
                            android:layout_margin="7dp"
                            app:contentPadding="22dp"
                            android:layout_weight="1"
                            app:cardElevation="3dp"
                            app:cardCornerRadius="11dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <Button
                                android:background="@color/colorPrimary"
                                android:textColor="@color/white"
                                android:drawableTop="@drawable/useradd"
                                style="@style/homeFragment"
                                android:text="@string/clientAdd"
                                android:id="@+id/addClient"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_margin="7dp"
                            android:layout_weight="1"
                            app:contentPadding="22dp"
                            app:cardElevation="3dp"
                            app:cardCornerRadius="11dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <Button
                                android:drawableTop="@drawable/user"
                                style="@style/homeFragment"
                                android:text="@string/client"
                                android:id="@+id/listClient"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.cardview.widget.CardView
                            android:layout_margin="7dp"
                            android:layout_weight="1"
                            app:contentPadding="22dp"
                            app:cardElevation="3dp"
                            app:cardCornerRadius="11dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <Button
                                android:drawableTop="@drawable/tareas"
                                style="@style/homeFragment"
                                android:text="@string/list_work"
                                android:id="@+id/goToListPart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_margin="7dp"
                            android:layout_weight="1"
                            app:contentPadding="22dp"
                            app:cardElevation="3dp"
                            app:cardCornerRadius="11dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <Button
                                android:drawableTop="@drawable/txt"
                                style="@style/homeFragment"
                                android:text="@string/json"
                                android:id="@+id/json"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="ca-app-pub-1208057699352262/3176986936">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>